KUBERNETES/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: familyclub-ingress
  namespace: production
  labels:
    app.kubernetes.io/name: familyclub-ingress
    app.kubernetes.io/part-of: familyclub
    app.kubernetes.io/component: ingress
    app.kubernetes.io/environment: production
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
  - host: familyclubqwerqwer12.pp.ua
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
